# Emotion_Recognization

./: README.md
demo/: CMakeLists.txt  emojis.cpp  emojis.h  main.cpp
